--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,8 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.resolve-lazily=true
+
+
+spring.jackson.serialization.fail-on-empty-beans=false
+spring.jackson.default-property-inclusion=non_null
