Add initial Spring Boot project structure

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,3 +37,6 @@ spring.servlet.multipart.resolve-lazily=true
 
 spring.jackson.serialization.fail-on-empty-beans=false
 spring.jackson.default-property-inclusion=non_null
+
+logging.level.org.springframework.security=DEBUG
+logging.level.com.bootcamp.makemycake=DEBUG
