Configcloudinary storage in cloud

--- a/.env
+++ b/.env
@@ -4,8 +4,13 @@
 DB_HOST=localhost
 DB_PORT=3306
 DB_USER=root
-DB_PASSWORD=slimanix13
+DB_PASSWORD=hamzahamidi
 
 # Email
 EMAIL_USERNAME=mustapha.jarmimm@gmail.com
 EMAIL_PASSWORD=cjqifohiqlzywxjm
+
+
+CLOUDINARY_CLOUD_NAME=dtrjt7d1y
+CLOUDINARY_API_KEY=441845992416972
+CLOUDINARY_API_SECRET=pe0Q4jp2kVN6XnKK00KVy3fwltg
