--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 DB_HOST=localhost
 DB_PORT=3306
 DB_USER=root
-DB_PASSWORD=slimanix13
+DB_PASSWORD=hamzahamidi
 
 # Email
 EMAIL_USERNAME=mustapha.jarmimm@gmail.com
