Complete version: includes all implemented options/features

--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,13 @@
             <artifactId>bcpkix-jdk18on</artifactId>
             <version>1.77</version>
         </dependency>
+
+        <!-- SpringDoc OpenAPI -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.3.0</version>
+        </dependency>
     </dependencies>
 
     <build>
