--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -4,7 +4,7 @@
 server.port=${PORT:8080}
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/makemycake?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/bniknsozbwrky5nje6j6?useSSL=false&serverTimezone=UTC
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
