--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,10 @@
 
 spring.application.name=makemycake
 
-# Import des variables d?environnement depuis le fichier .env
+# Import des variables d'environnement depuis le fichier .env
 spring.config.import=optional:file:.env[.properties]
 
-# Configuration de la base de données
+# Configuration de la base de donnÃ©es
 spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/makemycake?useSSL=false&serverTimezone=UTC
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
@@ -28,12 +28,11 @@ spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
 
-# Fichiers uploadés
+# Fichiers uploadÃ©s
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=10MB
 spring.servlet.multipart.resolve-lazily=true
-
 
 spring.jackson.serialization.fail-on-empty-beans=false
 spring.jackson.default-property-inclusion=non_null
