Add reminder to set SPRING_PROFILES_ACTIVE=prod for production

--- a/system.properties
+++ b/system.properties
@@ -1,1 +1,3 @@
-java.runtime.version=17 
+# Java version for Railway
+java.runtime.version=17
+# Set the active Spring profile to 'prod' in your deployment environment 
