--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -31,4 +31,11 @@ spring.servlet.multipart.resolve-lazily=true
 
 # Jackson Configuration
 spring.jackson.serialization.fail-on-empty-beans=false
-spring.jackson.default-property-inclusion=non_null 
+spring.jackson.default-property-inclusion=non_null
+
+# Logging Configuration
+logging.level.root=INFO
+logging.level.org.springframework=DEBUG
+logging.level.com.bootcamp.makemycake=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE 
