--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -4,10 +4,16 @@
 server.port=${PORT:8080}
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/bniknsozbwrky5nje6j6?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/bniknsozbwrky5nje6j6?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&connectTimeout=30000&socketTimeout=30000
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hikari Connection Pool Configuration
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.minimum-idle=1
+spring.datasource.hikari.idle-timeout=300000
 
 # JPA Configuration
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
@@ -38,4 +44,5 @@ logging.level.root=INFO
 logging.level.org.springframework=DEBUG
 logging.level.com.bootcamp.makemycake=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE 
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.com.zaxxer.hikari=DEBUG 
