--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -17,8 +17,8 @@ spring.datasource.hikari.idle-timeout=300000
 
 # JPA Configuration
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
 
 # Mail Configuration
 spring.mail.host=smtp.gmail.com
