update env to match web database

--- a/.env
+++ b/.env
@@ -1,10 +1,11 @@
 # .env
 
 # Base de données
-DB_HOST=localhost
+DB_HOST=sql3.freesqldatabase.com
 DB_PORT=3306
-DB_USER=root
-DB_PASSWORD=hamzahamidi
+DB_USER=sql3781826
+DB_PASSWORD=mm68SpgITX
+DB_NAME=sql3781826
 
 # Email
 EMAIL_USERNAME=mustapha.jarmimm@gmail.com
